# fractal

./: CMakeLists.txt  README.ja.md  README.md  projectpage.ja.md
datasets/: example.pcd  example.txt
include/: ascii2pcd_help.hpp  fractalAnalysis.hpp
src/: ascii2pcd.cpp  ascii2pcd_help.cpp  fractal.cpp  fractal2d.cpp  fractal3d.cpp  fractalAnalysis.cpp  fractal_practice.cpp  practice.cpp  test.py  visualize.cpp
src/MATLAB/: figure1.fig  figure2.fig  ground_truth1.fig  ground_truth2.fig  plot_fractal.m  visualizeDataset.m
src/python/: plot_fractal.py
